fix spacing around img
moved margin-x to 0

--- a/bioSite/styles.css
+++ b/bioSite/styles.css
@@ -175,6 +175,7 @@ footer {
     #images .container img {
         width: 100%;
         max-width: 100%;
+        margin: 5px 0;
     }
     footer {
         font-size: 1rem;
